--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "running_required": 1,
     "stretch1_required": 2,
-    "stretch2_required": 2
+    "stretch2_required": 2,
+    "running_required": 2
 }
